--- a/SoC_Project2/SoC_Project2/templates/dashboard.html
+++ b/SoC_Project2/SoC_Project2/templates/dashboard.html
@@ -4,6 +4,176 @@
 
 {% load staticfiles %}
 
-<h2>Dashboard</h2>
+        <!-- Begin Page Content -->
+        <div class="container-fluid">
+
+            <!-- Page Heading -->
+            <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+            </div>
+
+            <!-- Page Heading -->
+            <div class="d-sm-flex align-items-center justify-content-between mb-4">
+               <h4>Compete</h4> 
+            </div>
+
+            <!-- Content Row -->
+            <div class="row">
+
+                <!-- Earnings (Monthly) Card Example -->
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <div class="card border-left-primary shadow h-100 py-2">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Weekly challenges series</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800">CODE WEEK 1</div>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="icon ion-ios-trophy"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- python code to connect with competiton model-->
+
+            </div>
+
+            <!-- Skills -->
+            <div class="d-sm-flex align-items-center justify-content-between mb-4">
+               <h4>Skills</h4> 
+            </div>
+
+            <!-- Content Row -->
+            <div class="row">
+
+                <!-- practice languages content -->
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <div class="card border-left-success shadow h-100 py-2">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Skills</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800">PYTHON</div>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="icon ion-logo-python"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- skills you working on will be shown here-->
+
+            </div>
+            
+            <!-- explore -->
+            <div class="d-sm-flex align-items-center justify-content-between mb-4">
+               <h4>Explore</h4> 
+            </div>
+
+            <!-- Content Row -->
+            <div class="row">
+
+                <!-- Content Column -->
+                <div class="col-xl-4 col-lg-5">
+
+                    <!-- Project Card Example -->
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-danger">Problem Solving</h6>
+                        </div>
+                        <div class="card-body">
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">Data Structures</div>
+
+                            <!-- Divider -->
+                            <hr class="card-divider">
+
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">Algorithms</div>
+
+                            <!-- Divider -->
+                            <hr class="card-divider">
+
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">Mathematics</div>
+
+                        </div>
+                    </div>
+                
+                </div>
+
+                <!-- Content Column -->
+                <div class="col-xl-4 col-lg-5">
+
+                    <!-- Project Card Example -->
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-danger">Language Proficiency</h6>
+                        </div>
+                        <div class="card-body">
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">Python</div>
+
+                            <!-- Divider -->
+                            <hr class="card-divider">
+
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">Java</div>
+
+                            <!-- Divider -->
+                            <hr class="card-divider">
+
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">C++</div>
+
+                            <!-- Divider -->
+                            <hr class="card-divider">
+
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">C</div>
+
+                            <!-- Divider -->
+                            <hr class="card-divider">
+
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">JavaScript</div>
+
+                            <!-- Divider -->
+                            <hr class="card-divider">
+
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">Functional Programming</div>
+
+                        </div>
+                    </div>
+                
+                </div>
+
+                <!-- Content Column -->
+                <div class="col-xl-4 col-lg-5">
+
+                    <!-- Project Card Example -->
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-danger">Specialized Skills</h6>
+                        </div>
+                        <div class="card-body">
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">Artificial Intelligence</div>
+
+                            <!-- Divider -->
+                            <hr class="card-divider">
+
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">SQL</div>
+
+                            <!-- Divider -->
+                            <hr class="card-divider">
+
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">Databases</div>
+
+                        </div>
+                    </div>
+                
+                </div>
+
+            </div>
+        
+
+        </div>
 
 {% endblock %}
