--- a/SoC_Project2/SoC_Project2/templates/dashboard.html
+++ b/SoC_Project2/SoC_Project2/templates/dashboard.html
@@ -9,18 +9,21 @@
 
             <!-- Page Heading -->
             <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+                <h1 class="h3 mb-0 text-gray-800"><b>Dashboard</b></h1>
             </div>
+
+            <!-- Divider -->
+            <hr class="heading-divider">
 
             <!-- Page Heading -->
             <div class="d-sm-flex align-items-center justify-content-between mb-4">
-               <h4>Compete</h4> 
+               <h4><b>Compete</b></h4> 
             </div>
 
             <!-- Content Row -->
             <div class="row">
 
-                <!-- Earnings (Monthly) Card Example -->
+                <!-- card - challenge card -->
                 <div class="col-xl-3 col-md-6 mb-4">
                     <div class="card border-left-primary shadow h-100 py-2">
                         <div class="card-body">
@@ -28,6 +31,10 @@
                                 <div class="col mr-2">
                                     <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Weekly challenges series</div>
                                     <div class="h5 mb-0 font-weight-bold text-gray-800">CODE WEEK 1</div>
+                                    <div class="my-2"></div>
+                                    <a href="#" class="btn btn-light">
+                                        <span class="text">Start Challenge</span>
+                                    </a>
                                 </div>
                                 <div class="col-auto">
                                     <i class="icon ion-ios-trophy"></i>
@@ -43,7 +50,7 @@
 
             <!-- Skills -->
             <div class="d-sm-flex align-items-center justify-content-between mb-4">
-               <h4>Skills</h4> 
+               <h4><b>Skills</b></h4> 
             </div>
 
             <!-- Content Row -->
@@ -57,6 +64,10 @@
                                 <div class="col mr-2">
                                     <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Skills</div>
                                     <div class="h5 mb-0 font-weight-bold text-gray-800">PYTHON</div>
+                                    <div class="my-2"></div>
+                                    <a href="#" class="btn btn-light">
+                                        <span class="text">Continue Practice</span>
+                                    </a>
                                 </div>
                                 <div class="col-auto">
                                     <i class="icon ion-logo-python"></i>
@@ -72,7 +83,7 @@
             
             <!-- explore -->
             <div class="d-sm-flex align-items-center justify-content-between mb-4">
-               <h4>Explore</h4> 
+               <h4><b>Explore</b></h4> 
             </div>
 
             <!-- Content Row -->
