added model file for weekly challenges and render with html

--- a/SoC_Project2/SoC_Project2/templates/base.html
+++ b/SoC_Project2/SoC_Project2/templates/base.html
@@ -14,7 +14,7 @@
     <!-- Custom fonts for this template-->
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet">
 
     <!-- Custom styles for this template-->
     <link href="{% static 'css/base.min.css' %}" rel="stylesheet">
@@ -57,7 +57,7 @@
                 
                 <!-- Nav Item - Subject -->
                 <li class="nav-item active">
-                    <a class="nav-link" href={% url 'compete' %}>
+                    <a class="nav-link" href={% url 'challenges:compete' %}>
                     <i class="icon ion-md-trophy"></i>
                     <span>COMPETE</span></a>
                 </li>
