--- a/SoC_Project2/SoC_Project2/static/css/base.css
+++ b/SoC_Project2/SoC_Project2/static/css/base.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: 'Fira Sans Extra Condensed', sans-serif;
+  font-family: 'Fjalla One', sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
