updates and code optimizations

--- a/SoC_Project2/SoC_Project2/templates/compete.html
+++ b/SoC_Project2/SoC_Project2/templates/compete.html
@@ -8,8 +8,8 @@
         <div class="container-fluid">
 
             <div class="col mr-2">
-                <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">All Contests</div>
-                <div class="h3 mb-0 font-weight-bold text-gray-800">Contests</div>
+                <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">Contests</div>
+                <div class="h3 mb-0 font-weight-bold text-gray-800">Weekly Challenges Series</div>
             </div>
 
             <!-- Divider -->
@@ -17,8 +17,11 @@
 
             <!-- Page Heading -->
             <div class="d-sm-flex align-items-center justify-content-between mb-4">
-               <h4><b>Active Contests</b></h4> 
+               <h4><b>Challenges</b></h4> 
             </div>
+
+            
+            {% for challenge in challenge_list %}
 
             <!-- Content Row -->
             <div class="row">
@@ -29,12 +32,12 @@
                         <div class="card-body">
                             <div class="row no-gutters align-items-center">
                                 <div class="col mr-2">
-                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Weekly challenges series</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">CODE WEEK 2</div>
+                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">{{ challenge.contest }}</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800">CODE WEEK {{ challenge.week }}</div>
                                 </div>
                                 <div class="col-auto">
                                     <div class="my-2"></div>
-                                    <a href="#" class="btn btn-light">
+                                    <a href={% url 'challenges:weekly_challenge' challenge.week %} class="btn btn-light">
                                         <span class="text">Start Challenge</span>
                                     </a>
                                 </div>
@@ -45,40 +48,7 @@
 
             </div>
 
-            <!-- Divider -->
-            <hr class="content-divider">
-
-            <!-- Page Heading -->
-            <div class="d-sm-flex align-items-center justify-content-between mb-4">
-               <h4><b>Archived Contests</b></h4> 
-            </div>
-
-            <!-- Content Row -->
-            <div class="row">
-
-                <!-- card - challenge card -->
-                <div class="col-xl-12">
-                    <div class="card border-left-primary shadow h-100 py-2">
-                        <div class="card-body">
-                            <div class="row no-gutters align-items-center">
-                                <div class="col mr-2">
-                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Weekly challenges series</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">CODE WEEK 1</div>
-                                </div>
-                                <div class="col-auto">
-                                    <div class="my-2"></div>
-                                    <a href="#" class="btn btn-light">
-                                        <span class="text">Start Challenge</span>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <!--  python code to generate all the contents  -->
+            {% endfor %}
 
         </div>
 
