--- a/SoC_Project2/SoC_Project2/templates/challenges.html
+++ b/SoC_Project2/SoC_Project2/templates/challenges.html
@@ -9,7 +9,7 @@
 
             <div class="col mr-2">
                 <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">Contests</div>
-                <div class="h3 mb-0 font-weight-bold text-gray-800">Weekly Challenges Series</div>
+                <div class="h3 mb-0 font-weight-bold text-gray-800">{{ object.contest }}</div>
             </div>
 
             <!-- Divider -->
