--- a/SoC_Project2/SoC_Project2/templates/dashboard.html
+++ b/SoC_Project2/SoC_Project2/templates/dashboard.html
@@ -23,28 +23,29 @@
             <!-- Content Row -->
             <div class="row">
 
-                <!-- card - challenge card -->
-                <div class="col-xl-3 col-md-6 mb-4">
-                    <div class="card border-left-primary shadow h-100 py-2">
-                        <div class="card-body">
-                            <div class="row no-gutters align-items-center">
-                                <div class="col mr-2">
-                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Weekly challenges series</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">CODE WEEK 1</div>
-                                    <div class="my-2"></div>
-                                    <a href="#" class="btn btn-light">
-                                        <span class="text">Start Challenge</span>
-                                    </a>
-                                </div>
-                                <div class="col-auto">
-                                    <i class="icon ion-ios-trophy"></i>
+                {% for challenge in challenges %}
+                    <!-- card - challenge card -->
+                    <div class="col-xl-3 col-md-6 mb-4">
+                        <div class="card border-left-primary shadow h-100 py-2">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">{{ challenge.contest }}</div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800">CODE WEEK {{ challenge.week }}</div>
+                                        <div class="my-2"></div>
+                                        <a href="#" class="btn btn-light">
+                                            <span class="text">Start Challenge</span>
+                                        </a>
+                                    </div>
+                                    <div class="col-auto">
+                                        <i class="icon ion-ios-trophy"></i>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <!-- python code to connect with competiton model-->
+                {% endfor %}
 
             </div>
 
