--- a/SoC_Project2/SoC_Project2/templates/dashboard.html
+++ b/SoC_Project2/SoC_Project2/templates/dashboard.html
@@ -33,7 +33,7 @@
                                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">{{ challenge.contest }}</div>
                                         <div class="h5 mb-0 font-weight-bold text-gray-800">CODE WEEK {{ challenge.week }}</div>
                                         <div class="my-2"></div>
-                                        <a href="#" class="btn btn-light">
+                                        <a href={% url 'challenges:weekly_challenge' challenge.week %} class="btn btn-light">
                                             <span class="text">Start Challenge</span>
                                         </a>
                                     </div>
